<resources>
    <string name="app_name">DDAKGI</string>

    <!-- intro -->
    <string name="more_mate">더 많은 룸메이트 찾아보기</string>
    <string name="introBeforeLog">로그인 후 \n 매칭률을 확인해보세요.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- hometab_menu -->
    <string name="filter_cancel">취소</string>
    <string name="filter_reset">리셋</string>
    <string name="filter_apply">적용</string>
    <string name="berforeLogin">로그인 후 \n 매칭율을 확인해보세요.</string>
    <string name="homeLifeStyleText">생활패턴 일치율</string>

    <!-- HomeTab 상세페이지 -->
    <string name="percent">매칭율</string>
    <string name="detailChatHint">마음에 드는\n예비 룸메이트와 대화를 나눠보세요!</string>
    <string name="DetailberforeLogin">로그인 후 매칭율을 확인해보세요.</string>

    <string name="prefDetail">원하는 Details</string>

    <!-- 생활패턴 질문 -->
    <string name="lifeStyle">생활패턴</string>
    <string name="lifeStyleQue1">1. 공동공간 청소는 얼마나 자주 하나요?</string>
    <string name="lifeStyleQue2">2. 흡연을 하나요?</string>
    <string name="lifeStyleQue3">3. 취침 시간은 언제인가요?</string>
    <string name="lifeStyleQue4">4. 집에 외부인(가족, 친구 등)을 얼마나 자주 데려오나요?</string>
    <string name="lifeStyleQue5">5. 기상 시간은 언제인가요?</string>
    <string name="lifeStyleQue6">6. 애완동물을 키우나요?</string>
    <string name="lifeStyleQue7">7. 식사는 어떻게 하나요?(주 4회 이상 택하는 방식)</string>
    <string name="lifeStyleQue8">8. 소모품이나 식료품을 함께 구매하고 싶나요?</string>
    <string name="lifeStyleQue9">9. 집에서 발생하는 생활 소음에 대해 어떻게 생각하나요?</string>
    <string name="lifeStyleQue10">10. 주말은 주로 어디서 보내나요?</string>

    <string name="lifeStyleAns1_1">1주에 2번 이상</string>
    <string name="lifeStyleAns1_2">1주에 1번</string>
    <string name="lifeStyleAns1_3">2주에 1번</string>
    <string name="lifeStyleAns1_4">1달에 1번</string>

    <string name="lifeStyleAns2_1">비흡연자에요</string>
    <string name="lifeStyleAns2_2">집 밖에서만 피워요</string>
    <string name="lifeStyleAns2_3">집 안에서 피워요</string>

    <string name="lifeStyleAns3_1">~10시</string>
    <string name="lifeStyleAns3_2">10시~12시</string>
    <string name="lifeStyleAns3_3">12시~오전 2시</string>
    <string name="lifeStyleAns3_4">2시~</string>
    <string name="lifeStyleAns3_5">불규칙해요</string>

    <string name="lifeStyleAns4_1">1달 3번↑</string>
    <string name="lifeStyleAns4_2">1달 1~2번</string>
    <string name="lifeStyleAns4_3">2~3달 1번</string>
    <string name="lifeStyleAns4_4">데려오지 않아요</string>

    <string name="lifeStyleAns5_1">6시 이전</string>
    <string name="lifeStyleAns5_2">6시에서 8시</string>
    <string name="lifeStyleAns5_3">8시 이후</string>
    <string name="lifeStyleAns5_4">불규칙해요</string>

    <string name="lifeStyleAns6_1">네!키워요</string>
    <string name="lifeStyleAns6_2">아뇨!룸메가 키우는 건 괜찮아요</string>
    <string name="lifeStyleAns6_3">아뇨!곤란해요</string>

    <string name="lifeStyleAns7_1">직접 만들어 먹어요</string>
    <string name="lifeStyleAns7_2">배달 시켜요</string>
    <string name="lifeStyleAns7_3">밖에서 먹어요</string>

    <string name="lifeStyleAns8_1">함께 구매할래요</string>
    <string name="lifeStyleAns8_2">일부만 함께 구매할래요</string>
    <string name="lifeStyleAns8_3">개별 구매할래요</string>

    <string name="lifeStyleAns9_1">밤낮 모두 조용</string>
    <string name="lifeStyleAns9_2">밤에는 조용</string>
    <string name="lifeStyleAns9_3">내 방만 조용</string>
    <string name="lifeStyleAns9_4">옆 집에 들리지 않을 정도면 괜찮아요</string>

    <string name="lifeStyleAns10_1">집에서 보내요</string>
    <string name="lifeStyleAns10_2">하루 정도는 밖에서 보내요</string>
    <string name="lifeStyleAns10_3">대부분 밖에 있어요</string>

    <!-- writetab -->
    <string name="writeHelp">글을 등록하고 나만의 룸메이트를 찾아보세요</string>
    <string name="writetoolName">등록하기</string>
    <string name="writeRoomTitle">방 등록하기</string>
    <string name="writeRoomHelp">내 글을 보고 함께 살고 싶은 룸메가 연락을 할 거에요!</string>
    <string name="writeMateTitle">룸메이트 등록하기</string>
    <string name="writeMateHelp">내 글을 보고 방이 있는 룸메가 연락을 할 거에요!</string>

    <!-- Mytab -->
    <string name="myStory">내가 등록한 글</string>
    <string name="modifyBt">수정</string>
    <string name="deleteBt">삭제</string>

    <!-- 방 등록하기 화면 -->
    <string name="WriteRoomTool">제목</string>
    <string name="roomTitle">제목</string>
    <string name="roomTitleHint">제목을 입력해주세요</string>
    <string name="roomLocate">위치</string>
    <string name="roomLocateText">방위치 검색</string>
    <string name="roomPhoto">사진</string>
    <string name="roomPhotoText">이미지 등록</string>
    <string name="roomPrice">보증금</string>
    <string name="roomPriceHint">만원</string>
    <string name="roomMonth">월세</string>
    <string name="roomYear">전세</string>
    <string name="roomMonthHint">만원(전세일 경우 0으로 입력)</string>
    <string name="roomHeight">층수</string>
    <string name="roomHeightHint">층(반 지하는 0, 지하는 -1)</string>
    <string name="roomExtraInfo">추가 정보 입력(선택)</string>
    <string name="roomType">유형</string>
    <string name="typeOne">원룸</string>
    <string name="typeTwo">투룸</string>
    <string name="typeHouse">주택</string>
    <string name="typeOffice">오피스텔</string>
    <string name="typeApart">아파트</string>
    <string name="roomSize">평수</string>
    <string name="sizeUnderTen">10평미만</string>
    <string name="sizeTen">10평대</string>
    <string name="sizeTwenty">20평대</string>
    <string name="sizeThirty">30평대</string>
    <string name="sizeFirty">40평대 이상</string>
    <string name="identify">임대 계약서/신분증 인증(선택)</string>
    <string name="identifymate">신분증 인증(선택)</string>
    <string name="prefDate">입주 가능일</string>
    <string name="prefDateText">입주 가능일 선택</string>
    <string name="pay">관리비</string>
    <string name="payHint">만원</string>
    <string name="waterPay">수도</string>
    <string name="electPay">전기</string>
    <string name="internetPay">인터넷</string>
    <string name="gasPay">도시가스</string>
    <string name="tvPay">TV</string>
    <string name="heatpay">난방</string>
    <string name="option">옵션</string>
    <string name="introduce">자기소개</string>
    <string name="introduceHint">간단하게 자기소개를 써보세요</string>
    <string name="extraQue">추가질문(최대 3개)</string>
    <string name="extraQueHint">예비룸메이트에게 추가로 묻고싶은 질문을 써보세요!</string>

    <!-- 룸메이트 등록하기 화면 -->
    <string name="mateLocateText">원하는 방 위치 검색</string>
    <string name="matePhoto">프로필 이미지 등록</string>

    <!-- 방 등록 화면-->
    <string name="writeroomTool">방 등록하기</string>
    <string name="finish">완료</string>
    <string name="title_activity_write_maps">Map</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="roomImageTool">사진등록(최대 15장)</string>
    <string name="gallery">갤러리에서 선택</string>
    <string name="camera">사진 촬영</string>

    <string name="identifyText">인증 뱃지를 받아 더 많은 룸메이트를 만나보세요.\n
                                인증 정보는 개인 정보 보호 약관에 따라 안전하게 보관됩니다.</string>
    <string name="IDCard">신분증</string>
    <string name="contract">임대계약서</string>
    <string name="roomidentifyTool">인증하기 (선택)</string>

    <string name="plusCard">신분증\n사진을 추가하세요.</string>
    <string name="plusContract">임대계약서\n사진을 추가하세요.</string>

    <!-- 검색 -->
    <string name="searchLocation">희망 지역 또는 지하철 역을 검색해보세요.</string>
    <string name="searchAll">지하철 역 또는 지역명을 입력하세요. \n
                            ex) 신림역, 강남구, 논현동</string>
    <string name="title_activity_write_room_locate">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_go_mate_identify">goMateIdentify</string>

    <!-- 필터 -->
    <string name="filterRoomType">방 종류</string>
    <string name="filter">모든 항목을 설정해야 정확한 필터를 할 수 있습니다.</string>

    <!-- ChatTab -->
    <string name="report">신고</string>
    <string name="noChat">채팅을 시작하지 않았습니다. 채팅을 시작하세요!</string>

    <!-- 신고 -->
    <string name="reportTool">신고하기</string>
    <string name="reportFinish">제출</string>
    <string name="reportOne">욕설 또는 비방</string>
    <string name="reportTwo">음란물</string>
    <string name="reportThree">광고</string>
    <string name="reportFour">허위매물</string>
    <string name="reportFive">기타</string>
    <string name="reportReason">사유를 입력해주세요</string>


    <!-- LikeTab -->
    <string name="likeTool">찜 목록</string>
    <string name="noLike">찜 목록이 없습니다.</string>

    <!-- MyTab -->
    <string name="myToolText">프로필 수정</string>
    <string name="QnA">Q &amp; A</string>
    <string name="noMyPosting">등록한 글이 없습니다.</string>

    <!-- 카카오 로그인 -->
    <string name="kakao_app_key">2a53a7a89edf17b188fd0f110c5b427f</string>
    <string name="kakao_scheme">kakao2a53a7a89edf17b188fd0f110c5b427f</string>
    <string name="kakaolink_host">kakaolink</string>

    <!-- 회원가입 -->
    <string name="registerProfileTool">프로필 등록</string>
    <string name="nickname">닉네임</string>
    <string name="Age">나이</string>
    <string name="registerLifestyle">생활패턴 등록하기</string>

    <string name="termsHint">딱지 서비스 이용을 위해 다음의 약관에 동의해주세요.</string>
    <string name="allterms">전체 동의합니다.</string>
    <string name="Infoterms">개인 정보 수집 및 이용에 대한 동의</string>
    <string name="Serviceterms">서비스 이용 약관에 대한 동의</string>
    <string name="InfoAgree">개인 정보 수집 및 이용에 동의합니다.</string>
    <string name="ServiceAgree">서비스 이용 약관에 동의합니다.</string>

    <!-- 설정 -->
    <string name="settingTool">설정</string>
    <string name="pushText">푸시알림</string>
    <string name="logoutText">로그아웃</string>
    <string name="getoutText">회원탈퇴</string>
    <string name="versionText">버전 정보 1.0.1</string>

    <!-- 도움말 -->
    <string name="helpTool">도움말</string>
    <string name="helpQueOne">\n 1. 생활패턴 질문은 어떻게 선정되었나요?\n</string>
    <string name="helpAnsOne">설문조사를 통해 룸메이트와 함께 생활할 경우 가장 중요한 10가지 생활 패턴을 선정했습니다. 글을 등록할 경우 내가 원하는 추가 질문 3가지를 등록할 수 있습니다.</string>
    <string name="helpQueTwo">\n2. 생활패턴 일치율은 어떻게 계산되나요?\n</string>
    <string name="helpAnsTwo">10가지 생활패턴 질문에 대해 상대방과 나의 답변이 일치하는 정도를 계산합니다. </string>
    <string name="helpQueThree">\n3. 글을 등록하면 어떻게 되나요?\n</string>
    <string name="helpAnsThree">등록한 글은 다른 사용자의 홈에 노출됩니다. 이를 보고 나와 비슷한 조건을 원하는 룸메이트가 1:1 대화를 신청할 수 있습니다. 따라서 검색 없이도 좀 더 빨리 룸메이트를 찾을 수 있습니다.</string>
    <string name="helpQueFour">\n4. 개인 정보는 안전하게 보관되고 있나요?\n</string>
    <string name="helpAnsFour">딱지는 사용자의 이메일과 비밀번호를 암호화해 관리하고 있습니다. 본인 인증, 임대 계약서, 신분증 인증에서 사용된 정보 역시 보안 처리하고 있습니다.</string>
    <string name="helpQueFive">\n5. 허위 정보 또는 부적절한 정보를 기재한 룸메이트를 만나면 어떡하죠?\n</string>
    <string name="helpAnsFive">딱지는 허위 정보를 방지하기 위해 임대 계약서와 신분증 인증 배지 제도를 시행합니다. 가급적 인증 배지가 있는 사용자와 연락할 것을 추천합니다. 그 외에도 부적절한 정보를 기재한 룸메이트를 만나면 신고해주세요. 딱지에서 확인 후 즉시 제재 처리 하겠습니다. </string>
    <string name="helpQueSix">\n6. 어플리케이션에서만 룸메이트와 대화할 수 있나요?\n</string>
    <string name="helpAnsSix">1:1 채팅방에서 대화를 해본 후 룸메이트가 마음에 든다면, 메신저 아이디 또는 핸드폰 번호를 주고 받으세요. 다만 룸메이트가 확정되기 전에는 최소한의 정보만을 주고 받는 것을 추천합니다.</string>
    <string name="helpQueSeven">\n7. 더 이상 연락을 받고 싶지 않아요.\n</string>
    <string name="helpAnsSeven">룸메이트를 구했거나 더 이상 연락을 받고 싶지 않은 경우 마이페이지에서 해당 게시글을 삭제해주세요. 이후에는 다른 사용자에게 정보가 노출되지 않습니다.</string>
    <string name="helpQueEight">\n8. 그 외에도 궁금한 점 / 건의하고 싶은 점이 있어요.\n</string>
    <string name="helpAnsEight">ttakjiapp@gmail.com으로 언제든지 연락주세요. 딱지는 여러분의 문의와 건의를 사랑합니다!</string>
</resources>
